# excel-parser

./: Events Bot for Freshmen.xls  README.md  pyproject.toml
excel_parser/: main.py
